src/test/deca/context/valid/method_redefinition_with_different_identifiers.deca
/*
    Description : redéfinition d'une méthode en modifiant les types

    Résultat : OK
*/
class B{
    void x(int a, int b){}
}
class A extends B{
    void x(int aa, int bb){}
}
