src/test/deca/context/invalid/method_redefinition_with_more_params.deca
/*
    Description : Redéfinition d'une méthode en ajoutant des paramètres

    Résultat : Erreur contextuelle
*/
class A{
    void x(int a, int b){}
}
class B extends A{
    void x(int a, int b, int c){}
}
